# qt-tray-icon

./: CMakeLists.txt
